[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/hud.gd" type="Script" id=1]
[ext_resource path="res://images/hud.png" type="Texture" id=2]
[ext_resource path="res://images/key.png" type="Texture" id=3]
[ext_resource path="res://images/redheart.png" type="Texture" id=4]

[node name="hud" type="CanvasLayer"]
scale = Vector2( 1, 0.6 )
transform = Transform2D( 1, 0, 0, 0.6, 0, 0 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 514.381, 52.274 )
texture = ExtResource( 2 )

[node name="keys" type="Sprite" parent="."]
position = Vector2( 977.355, 36.2937 )
scale = Vector2( -2.73428, 1.93964 )
texture = ExtResource( 3 )

[node name="heart1" type="Sprite" parent="."]
position = Vector2( 262.449, 53.4494 )
texture = ExtResource( 4 )

[node name="heart2" type="Sprite" parent="."]
position = Vector2( 377.499, 52.9458 )
texture = ExtResource( 4 )

[node name="heart3" type="Sprite" parent="."]
position = Vector2( 492.586, 53.8448 )
texture = ExtResource( 4 )

[node name="heart4" type="Sprite" parent="."]
position = Vector2( 607.352, 52.7081 )
texture = ExtResource( 4 )

[node name="heart5" type="Sprite" parent="."]
position = Vector2( 724.187, 54.6052 )
texture = ExtResource( 4 )

